// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot match 1`] = `
<tr
  className="src-shared-components-SubmissionManagement-Submission-___styles__submission-row___3qYfw"
>
  <td
    className="src-shared-components-SubmissionManagement-Submission-___styles__id-col___1_zXu"
  />
  <td />
  <td
    className="src-shared-components-SubmissionManagement-Submission-___styles__date-col___303om"
  >
    Invalid date
  </td>
  <td
    className="src-shared-components-SubmissionManagement-Submission-___styles__action-col___31vp7"
  >
    <div>
      <a>
        <DownloadIcon
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
      </a>
      <button
        className="src-shared-components-SubmissionManagement-Submission-___styles__delete-icon___2zo1O"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <DeleteIcon
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
      <button
        className="src-shared-components-SubmissionManagement-Submission-___styles__expand-icon___2pInV src-shared-components-SubmissionManagement-Submission-___styles__expanded___1yXMz"
        onClick={[Function]}
        type="button"
      >
        <ExpandIcon
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
  </td>
</tr>
`;

exports[`Snapshot match 2`] = `
<tr
  className="src-shared-components-SubmissionManagement-Submission-___styles__submission-row___3qYfw"
>
  <td
    className="src-shared-components-SubmissionManagement-Submission-___styles__id-col___1_zXu"
  >
    12345
  </td>
  <td />
  <td
    className="src-shared-components-SubmissionManagement-Submission-___styles__date-col___303om"
  >
    Invalid date
  </td>
  <td
    className="src-shared-components-SubmissionManagement-Submission-___styles__action-col___31vp7"
  >
    <div>
      <a>
        <DownloadIcon
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
      </a>
      <button
        className="src-shared-components-SubmissionManagement-Submission-___styles__delete-icon___2zo1O"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <DeleteIcon
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
      <button
        className="src-shared-components-SubmissionManagement-Submission-___styles__expand-icon___2pInV"
        onClick={[Function]}
        type="button"
      >
        <ExpandIcon
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
  </td>
</tr>
`;
